// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Dialogs Context Factor Edit Dialog can render 1`] = `
<div class="el-dialog__wrapper" name="dialog-fade" style="z-index: 2001;">
  <div role="dialog" aria-modal="true" aria-label="My Context Factor" class="el-dialog" style="margin-top: 15vh;">
    <div class="el-dialog__header"><span class="el-dialog__title">My Context Factor</span><button type="button" aria-label="Close" class="el-dialog__headerbtn"><i class="el-dialog__close el-icon el-icon-close"></i></button></div>
    <div class="el-dialog__body">
      <div class="el-row">
        <div class="el-col el-col-24">
          <form class="el-form el-form--label-left">
            <div class="el-form-item is-required"><label for="name" class="el-form-item__label" style="width: 120px;">context_factor.edit.name</label>
              <div class="el-form-item__content" style="margin-left: 120px;">
                <div class="el-input">
                  <!----><input type="text" autocomplete="off" class="el-input__inner">
                  <!---->
                  <!---->
                  <!---->
                </div>
                <!---->
              </div>
            </div>
            <div class="el-form-item"><label for="contextType" class="el-form-item__label" style="width: 120px;">context_factor.edit.type</label>
              <div class="el-form-item__content" style="margin-left: 120px;">
                <div id="select-context-type" placeholder="Select" value-key="id" clearable="">
                  <div class="select-context-type-option" value="[object Object]" label="Context Type 1"><i class="context-type-icon fa fa-heart"></i> <span>Context Type 1</span></div>
                  <div class="select-context-type-option" value="[object Object]" label="Context Type 2"><i class="context-type-icon fa fa-gear"></i> <span>Context Type 2</span></div>
                </div>
                <!---->
              </div>
            </div> <br>
            <h4>context_factor.edit.attributes</h4>
            <form class="el-form el-form--inline">
              <div class="el-form-item is-required">
                <!---->
                <div class="el-form-item__content">
                  <div class="el-input">
                    <!----><input type="text" autocomplete="off" placeholder="context_factor.edit.attribute.key" class="el-input__inner">
                    <!---->
                    <!---->
                    <!---->
                  </div>
                  <!---->
                </div>
              </div>
              <div class="el-form-item is-required">
                <!---->
                <div class="el-form-item__content">
                  <div class="el-input">
                    <!----><input type="text" autocomplete="off" placeholder="context_factor.edit.attribute.value" class="el-input__inner">
                    <!---->
                    <!---->
                    <!---->
                  </div>
                  <!---->
                </div>
              </div>
              <div content="context_factor.edit.attribute.remove"><button type="button" class="el-button el-button--info is-plain">
                  <!----><i class="el-icon-close"></i>
                  <!----></button></div>
            </form> <button type="button" class="el-button el-button--default is-plain">
              <!----><i class="el-icon-plus"></i><span>
          context_factor.edit.attribute.add
        </span></button>
          </form>
        </div>
      </div>
    </div>
    <div class="el-dialog__footer">
      <div class="el-row">
        <div class="el-col el-col-24"><button type="button" class="el-button el-button--text">
            <!---->
            <!----><span>context_factor.edit.cancel</span></button> <button type="button" class="el-button el-button--success">
            <!---->
            <!----><span>context_factor.edit.save</span></button></div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Dialogs Context Factor Edit Dialog it renders the form it has a field for the context Type the field is rendered 1`] = `
<div id="select-context-type" placeholder="Select" value-key="id" clearable="">
  <div class="select-context-type-option" value="[object Object]" label="Context Type 1"><i class="context-type-icon fa fa-heart"></i> <span>Context Type 1</span></div>
  <div class="select-context-type-option" value="[object Object]" label="Context Type 2"><i class="context-type-icon fa fa-gear"></i> <span>Context Type 2</span></div>
</div>
`;

exports[`Dialogs Context Factor Edit Dialog it renders the form it renders the attributes can add an attribute 1`] = `
<div class="el-dialog__wrapper" name="dialog-fade" style="z-index: 2025;">
  <div role="dialog" aria-modal="true" aria-label="My Context Factor" class="el-dialog" style="margin-top: 15vh;">
    <div class="el-dialog__header"><span class="el-dialog__title">My Context Factor</span><button type="button" aria-label="Close" class="el-dialog__headerbtn"><i class="el-dialog__close el-icon el-icon-close"></i></button></div>
    <div class="el-dialog__body">
      <div class="el-row">
        <div class="el-col el-col-24">
          <form class="el-form el-form--label-left">
            <div class="el-form-item is-required"><label for="name" class="el-form-item__label" style="width: 120px;">context_factor.edit.name</label>
              <div class="el-form-item__content" style="margin-left: 120px;">
                <div class="el-input">
                  <!----><input type="text" autocomplete="off" class="el-input__inner">
                  <!---->
                  <!---->
                  <!---->
                </div>
                <!---->
              </div>
            </div>
            <div class="el-form-item"><label for="contextType" class="el-form-item__label" style="width: 120px;">context_factor.edit.type</label>
              <div class="el-form-item__content" style="margin-left: 120px;">
                <div id="select-context-type" placeholder="Select" value-key="id" clearable="">
                  <div class="select-context-type-option" value="[object Object]" label="Context Type 1"><i class="context-type-icon fa fa-heart"></i> <span>Context Type 1</span></div>
                  <div class="select-context-type-option" value="[object Object]" label="Context Type 2"><i class="context-type-icon fa fa-gear"></i> <span>Context Type 2</span></div>
                </div>
                <!---->
              </div>
            </div> <br>
            <h4>context_factor.edit.attributes</h4>
            <form class="el-form el-form--inline">
              <div class="el-form-item is-required">
                <!---->
                <div class="el-form-item__content">
                  <div class="el-input">
                    <!----><input type="text" autocomplete="off" placeholder="context_factor.edit.attribute.key" class="el-input__inner">
                    <!---->
                    <!---->
                    <!---->
                  </div>
                  <!---->
                </div>
              </div>
              <div class="el-form-item is-required">
                <!---->
                <div class="el-form-item__content">
                  <div class="el-input">
                    <!----><input type="text" autocomplete="off" placeholder="context_factor.edit.attribute.value" class="el-input__inner">
                    <!---->
                    <!---->
                    <!---->
                  </div>
                  <!---->
                </div>
              </div>
              <div content="context_factor.edit.attribute.remove"><button type="button" class="el-button el-button--info is-plain">
                  <!----><i class="el-icon-close"></i>
                  <!----></button></div>
            </form>
            <form class="el-form el-form--inline">
              <div class="el-form-item is-required">
                <!---->
                <div class="el-form-item__content">
                  <div class="el-input">
                    <!----><input type="text" autocomplete="off" placeholder="context_factor.edit.attribute.key" class="el-input__inner">
                    <!---->
                    <!---->
                    <!---->
                  </div>
                  <!---->
                </div>
              </div>
              <div class="el-form-item is-required">
                <!---->
                <div class="el-form-item__content">
                  <div class="el-input">
                    <!----><input type="text" autocomplete="off" placeholder="context_factor.edit.attribute.value" class="el-input__inner">
                    <!---->
                    <!---->
                    <!---->
                  </div>
                  <!---->
                </div>
              </div>
              <div content="context_factor.edit.attribute.remove"><button type="button" class="el-button el-button--info is-plain">
                  <!----><i class="el-icon-close"></i>
                  <!----></button></div>
            </form> <button type="button" class="el-button el-button--default is-plain">
              <!----><i class="el-icon-plus"></i><span>
          context_factor.edit.attribute.add
        </span></button>
          </form>
        </div>
      </div>
    </div>
    <div class="el-dialog__footer">
      <div class="el-row">
        <div class="el-col el-col-24"><button type="button" class="el-button el-button--text">
            <!---->
            <!----><span>context_factor.edit.cancel</span></button> <button type="button" class="el-button el-button--success">
            <!---->
            <!----><span>context_factor.edit.save</span></button></div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Dialogs Context Factor Edit Dialog it renders the form it renders the attributes can remove an attribute 1`] = `
<div class="el-dialog__wrapper" name="dialog-fade" style="z-index: 2027;">
  <div role="dialog" aria-modal="true" aria-label="My Context Factor" class="el-dialog" style="margin-top: 15vh;">
    <div class="el-dialog__header"><span class="el-dialog__title">My Context Factor</span><button type="button" aria-label="Close" class="el-dialog__headerbtn"><i class="el-dialog__close el-icon el-icon-close"></i></button></div>
    <div class="el-dialog__body">
      <div class="el-row">
        <div class="el-col el-col-24">
          <form class="el-form el-form--label-left">
            <div class="el-form-item is-required"><label for="name" class="el-form-item__label" style="width: 120px;">context_factor.edit.name</label>
              <div class="el-form-item__content" style="margin-left: 120px;">
                <div class="el-input">
                  <!----><input type="text" autocomplete="off" class="el-input__inner">
                  <!---->
                  <!---->
                  <!---->
                </div>
                <!---->
              </div>
            </div>
            <div class="el-form-item"><label for="contextType" class="el-form-item__label" style="width: 120px;">context_factor.edit.type</label>
              <div class="el-form-item__content" style="margin-left: 120px;">
                <div id="select-context-type" placeholder="Select" value-key="id" clearable="">
                  <div class="select-context-type-option" value="[object Object]" label="Context Type 1"><i class="context-type-icon fa fa-heart"></i> <span>Context Type 1</span></div>
                  <div class="select-context-type-option" value="[object Object]" label="Context Type 2"><i class="context-type-icon fa fa-gear"></i> <span>Context Type 2</span></div>
                </div>
                <!---->
              </div>
            </div> <br>
            <h4>context_factor.edit.attributes</h4> <button type="button" class="el-button el-button--default is-plain">
              <!----><i class="el-icon-plus"></i><span>
          context_factor.edit.attribute.add
        </span></button>
          </form>
        </div>
      </div>
    </div>
    <div class="el-dialog__footer">
      <div class="el-row">
        <div class="el-col el-col-24"><button type="button" class="el-button el-button--text">
            <!---->
            <!----><span>context_factor.edit.cancel</span></button> <button type="button" class="el-button el-button--success">
            <!---->
            <!----><span>context_factor.edit.save</span></button></div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Dialogs Context Factor Edit Dialog it renders the form it renders the attributes the form is rendered 1`] = `
<form class="el-form el-form--inline">
  <div class="el-form-item is-required">
    <!---->
    <div class="el-form-item__content">
      <div class="el-input">
        <!----><input type="text" autocomplete="off" placeholder="context_factor.edit.attribute.key" class="el-input__inner">
        <!---->
        <!---->
        <!---->
      </div>
      <!---->
    </div>
  </div>
  <div class="el-form-item is-required">
    <!---->
    <div class="el-form-item__content">
      <div class="el-input">
        <!----><input type="text" autocomplete="off" placeholder="context_factor.edit.attribute.value" class="el-input__inner">
        <!---->
        <!---->
        <!---->
      </div>
      <!---->
    </div>
  </div>
  <div content="context_factor.edit.attribute.remove"><button type="button" class="el-button el-button--info is-plain">
      <!----><i class="el-icon-close"></i>
      <!----></button></div>
</form>
`;
